# bookstore

./: .env  .gitignore  alembic.ini  main.py  pyproject.toml
app/: main.py
app/api/v1/routes/: author.py  book.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  author.py  base.py  book.py
app/repositories/: author.py  book.py
app/schemas/: author.py  book.py
app/services/: author.py  book.py
migrations/: env.py
migrations/versions/: 3228a73bdaed_add_author_model_and_book_author_id_.py  8a77a4e2a667_create_books_table.py
